// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceFormat renders correctly 1`] = `
<Text
  allowFontScaling={false}
  style={
    [
      {
        "color": "#2B1911",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
      },
      false,
      undefined,
      false,
    ]
  }
>
  12 345.44
   
  EUR
</Text>
`;

exports[`PriceFormat renders correctly for sats 1`] = `
<Text
  allowFontScaling={false}
  style={
    [
      {
        "color": "#2B1911",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
      },
      false,
      undefined,
      false,
    ]
  }
>
  12 345
   
  SAT
</Text>
`;
